--- a/fish-project-api/Gemfile
+++ b/fish-project-api/Gemfile
@@ -9,7 +9,7 @@ gem 'rails', '~> 6.1.5'
 gem 'sqlite3', '~> 1.4'
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
-gem 'fast_jasonapi'
+gem 'fast_jsonapi'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
 # Use Redis adapter to run Action Cable in production
