--- a/fish-project-api/Gemfile
+++ b/fish-project-api/Gemfile
@@ -7,6 +7,7 @@ ruby '2.6.1'
 gem 'rails', '~> 6.1.5'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.4'
+gem 'pry'
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 gem 'fast_jsonapi'
